<resources>
    <string name="app_name">Calculatrice EII</string>
    <string name="ce">CE</string>
    <string name="Pourcentage">%</string>
    <string name="c">C</string>
    <string name="delete">Delete</string>
    <string name="_1_x">1/x</string>
    <string name="x2">x2</string>
    <string name="racine_x">√x</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="soustraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="plus_ou_moins">+/-</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="egual">=</string>
</resources>